# 2d-gaussian-blur

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  convolution.cc  convolution.cu  ops.h
src/: convolution.cu  file.h  ops.h  tga_image.h  timer.h
tga-images/: deer-3-1366×768.tga  example.tga
